--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.2",
     "aos": "^2.3.4",
+    "class-variance-authority": "^0.7.1",
     "embla-carousel": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.475.0",
