Revert "preparação depoimento"
This reverts commit e94db8501ff5c5dbbaaf1c7b5e95bba9074cbf1a.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,41 +1,87 @@
 {
+
   "compilerOptions": {
-    "baseUrl": ".",
+
+    // ... outras configurações
+
+    "baseUrl": ".", // Importante: define o ponto de partida para os caminhos
+
     "paths": {
-      // CORREÇÃO: Mapeia o atalho "@/" para a raiz do projeto ("./"),
-      // para que você possa importar usando "@/app/_components/..."
-      "@/*": ["./*"] 
+
+      // Este atalho mapeia "@/*" (como '@/utils/...') para "src/*" (como 'src/utils/...')
+
+      "@/*": [
+
+        "./src/*"
+
+      ]
+
     },
+
     "target": "ES2017",
+
     "lib": [
+
       "dom",
+
       "dom.iterable",
+
       "esnext"
+
     ],
+
     "allowJs": true,
+
     "skipLibCheck": true,
+
     "strict": false,
+
     "noEmit": true,
+
     "incremental": true,
+
     "module": "esnext",
+
     "esModuleInterop": true,
+
     "moduleResolution": "node",
+
     "resolveJsonModule": true,
+
     "isolatedModules": true,
+
     "jsx": "preserve",
+
     "plugins": [
+
       {
+
         "name": "next"
+
       }
+
     ]
+
   },
+
   "include": [
+
     "next-env.d.ts",
+
     ".next/types/**/*.ts",
+
     "**/*.ts",
+
     "**/*.tsx"
+
   ],
+
   "exclude": [
+
     "node_modules"
+
   ]
+
+  // ...
+
 }
