--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-slot": "^1.1.2",
+    "@supabase/supabase-js": "^2.86.0",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "embla-carousel": "^8.5.2",
