--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sharp": "^0.34.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -31,5 +30,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "sharp": "^0.34.5"
   }
 }
